services/infrastructure/frontend-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-web
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-web
  template:
    metadata:
      labels:
        app: frontend-web
    spec:
      containers:
      - name: frontend-web
        image: gggfox/portfolio-web-frontend:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: portfolio
spec:
  type: LoadBalancer
  selector:
    app: frontend-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
