services/infrastructure/server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  namespace: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: gggfox/portfolio:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: portfolio
spec:
  type: NodePort
  ports:
  - port: 3000
    targetPort: 3000
    nodePort: 30001
  selector:
    app: server
